View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0023259 | Community | OCCT:Coding | public | 2012-07-11 15:16 | 2012-11-16 13:17 |
Reporter | Pawel | Assigned To | Pawel | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2005 | ||
Product Version | 6.5.3 | ||||
Target Version | 6.5.4 | Fixed in Version | 6.5.4 | ||
Summary | 0023259: MSVC: C4101 warning - unreferenced local variable | ||||
Description | Unreferenced local variables should be removed. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Corresponding git branch pushed. Please review. |
|
No remarks, please test |
|
Dear BugMaster, The workbenches KAS:dev:apn-23259-occt (GIT branch CR23259) KAS:dev:apn-23259-products (GIT master) were compiled on Linux and Windows platforms and tested. Regression: Not detected Improvements: Not detected Testing case: Not needed See results in /QADisk/occttests/results/KAS/dev/apn-23259-products_17072012/lin See reference results in /QADisk/occttests/results/KAS/dev/products-20120706-opt_06072012/lin See test cases in /QADisk/occttests/tests/ED |
occt: master 575aec54 2012-07-11 12:11:56 Details Diff |
0023259: MSVC: C4101 warning - unreferenced local variable Removed unreferenced variables |
Affected Issues 0023259 |
|
mod - src/IntTools/IntTools_FaceFace.cxx | Diff File | ||
mod - src/QABugs/QABugs_11.cxx | Diff File | ||
mod - src/QANewDBRepNaming/QANewDBRepNaming.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2012-07-11 15:16 | Pawel | New Issue | |
2012-07-11 15:16 | Pawel | Assigned To | => Pawel |
2012-07-11 16:14 | Pawel | Note Added: 0020913 | |
2012-07-11 16:14 | Pawel | Assigned To | Pawel => bugmaster |
2012-07-11 16:14 | Pawel | Status | new => resolved |
2012-07-11 17:31 |
|
Note Added: 0020917 | |
2012-07-11 17:31 |
|
Status | resolved => reviewed |
2012-07-12 11:29 | apn | Assigned To | bugmaster => apn |
2012-07-17 15:45 | apn | Note Added: 0021009 | |
2012-07-17 15:46 | apn | Note Edited: 0021009 | |
2012-07-17 15:46 | apn | Test case number | => Not needed |
2012-07-17 15:46 | apn | Assigned To | apn => bugmaster |
2012-07-17 15:46 | apn | Status | reviewed => tested |
2012-07-23 12:20 | Pawel | Changeset attached | => occt master 575aec54 |
2012-07-23 12:21 | Pawel | Assigned To | bugmaster => Pawel |
2012-07-23 12:21 | Pawel | Status | tested => verified |
2012-07-23 12:21 | Pawel | Resolution | open => fixed |
2012-11-16 13:14 | bugmaster | Fixed in Version | => 6.5.4 |
2012-11-16 13:17 | bugmaster | Status | verified => closed |
2014-01-11 11:58 |
|
Category | OCCT Release:BUILD => OCCT:Coding |