0023259: MSVC: C4101 warning - unreferenced local variable

Removed unreferenced variables